api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cursor-share
  namespace: cursor-share
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
  - hosts:
    - "cursor-share.brennonloveless.com"
    secretName: cursor-share
  rules:
  - host: "cursor-share.brennonloveless.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cursor-share
            port:
              number: 8080
